<resources>
    <string name="app_name">FOD</string>
    <string name="letsgetStarted">Let\'s Get You Started</string>
    <string name="MobileHint">Enter 10 digit Indian Mobile number</string>
    <string name="loginBtn">Login</string>
    <string name="invalidMobile">Invalid Mobile Number</string>
    <string name="hint_otp_activity">We have sent a \"4 digit OTP \"</string>
    <string name="edit">Edit</string>
    <string name="verify">Verify</string>
    <string name="nameHint">Enter Your Name</string>
    <string name="emailHint">Enter Your Email</string>
    <string name="save">SAVE</string>
    <string name="completeProfile">Complete Your Profile</string>
    <string name="title_home">Explore</string>
    <string name="title_dash">Dashboard</string>
    <string name="title_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterLocation">Enter Your Location</string>
    <string name="focus">Focus on where you’re headed. We’ll focus on getting comfort home there.</string>
    <string name="nearme">Find FOD near Me</string>
    <string name="cities">Popular Cities</string>
    <string name="logout">Logout</string>
    <string name="list_your_property">List Your Property</string>
    <string name="refer">Refer And Earn</string>
    <string name="notification">Notification</string>
    <string name="feed">Feedback</string>
    <string name="policy">Tenancy Policies</string>
    <string name="term">Term and Conditions</string>
    <string name="explore">Explore</string>
    <string name="notRoom">You are not staying in any FOD.</string>
    <string name="payment">Payment</string>
    <string name="bookings">Bookings</string>
    <string name="home_check_list">Home Checlist</string>
    <string name="service">Service Request</string>
    <string name="know_your_fod">Know Your FOD</string>
    <string name="title_account">Account</string>
    <string name="basic">Basic Info</string>
    <string name="fatherName">Father Name</string>
    <string name="address">Address</string>
    <string name="fatherMobile">Father Mobile</string>
    <string name="no_address_found">No Address Found</string>
    <string name="currentPg">Current FOD</string>
    <string name="fod_name">FOD Name</string>
    <string name="care_taker_mobile">Care Taker Mobile</string>
    <string name="property_name">Property Name</string>
    <string name="rent">Rent From</string>
    <string name="security_deposite">Security Deposite</string>
    <string name="security_deposite_month">1 Month</string>
    <string name="property_price">Rs . 5999</string>
    <string name="flat_type">1 BHK</string>
    <string name="location">Location</string>
    <string name="book_btn">Book Now</string>
    <string name="price">Price Breakup</string>
    <string name="security_money">Security Money</string>
    <string name="monthly_money">Monthly Rent</string>
    <string name="electricity_money">Electricity Bill</string>
    <string name="note_1">1. Guest can check in using any local or outstation ID Proof    (PAN card not accepted).</string>
    <string name="note_2">2. Couples are welcome.</string>
    <string name="note_3">3. All Nationals are allowed.</string>
    <string name="note">Please Read</string>
    <string name="security_money_hint">* Your security money will be refunded after the completion of your booking tenure.</string>
    <string name="date">03 March 2019 to 02 March 2020</string>
    <string name="change">change</string>
    <string name="book_visit">Book A Visit</string>
    <string name="pay_now">Pay Now</string>
    <string name="available">Availability</string>
    <string name="adv_payment">OR Make an advance payment of Rs 1000 to Book this property</string>
    <string name="call">CAll</string>
    <string name="visiting_date">Visiting Date</string>
    <string name="visiting_time">Visiting Time</string>
    <string name="select">Select</string>
    <string name="starting_date">CheckIn</string>
    <string name="checkOut">Check Out</string>
    <string name="select_date">Booking Dates</string>
    <string name="care_taker_name">Care Take Name</string>
</resources>
