<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="true"
    app:cardUseCompatPadding="true"
    android:layout_margin="@dimen/padding_4">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/propertyImage"
        android:src="@drawable/image_logo_back"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="220sp" />
    <LinearLayout
        android:layout_marginBottom="@dimen/margin_top_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/propertyName"
               android:textSize="24sp"
               android:textStyle="bold"
               android:textColor="@color/colorPrimaryDark"
               android:padding="@dimen/padding_4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/property_name"
               />
          <RelativeLayout
              android:padding="@dimen/padding_4"
              android:layout_gravity="end"
              android:gravity="end"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
              <TextView
                  android:padding="@dimen/parent_layout_padding"
                  android:id="@+id/flatType"
                  android:textColor="@color/white"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentEnd="true"
                  android:layout_marginEnd="12dp"
                  android:background="@drawable/chip"
                  android:gravity="end"
                  android:text="@string/flat_type" />
          </RelativeLayout>
       </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rent"
                    />
                <TextView
                    android:textColor="@color/grey"
                    android:id="@+id/proeprtyRent"
                    android:layout_marginTop="@dimen/padding_4"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/property_price"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/security_deposite"
                    />
                <TextView
                    android:textColor="@color/grey"
                    android:id="@+id/proeprtySecurity"
                    android:layout_marginTop="@dimen/padding_4"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/security_deposite_month"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>