<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PropertyView">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true"
            >

            <ImageView
                android:id="@+id/imageView"
                app:layout_collapseMode="parallax"
                android:src="@drawable/image_logo_back"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:title="@string/property_name"
                app:layout_collapseMode="pin"
                />


        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/propertyCard"
            app:cardElevation="@dimen/zero"
            app:cardUseCompatPadding="true"
            android:clipToPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/padding_8"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@id/propertyName"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:text="@string/property_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_marginTop="@dimen/padding_4"
                    android:id="@+id/propertyAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/address"
                    />
                <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="@dimen/margin_top_view"
                    android:id="@+id/inclusion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/padding_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="@dimen/header_text_size"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        />
                    <View style="@style/Divider" android:layout_marginTop="@dimen/btn_radius"/>
                    <LinearLayout
                        android:layout_marginTop="@dimen/parent_layout_padding"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:text="@string/security_money"
                            />
                        <TextView
                            android:gravity="end"
                            android:id="@+id/security_money"
                            android:layout_weight="1"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:text="0000"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="@dimen/btn_radius"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:text="@string/monthly_money"
                            />
                        <TextView
                            android:gravity="end"
                            android:id="@+id/monthly_payment"
                            android:layout_weight="1"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:text="0000"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="@dimen/btn_radius"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:text="@string/electricity_money"
                            />
                        <TextView
                            android:textColor="@android:color/black"
                            android:gravity="end"
                            android:id="@+id/electricity_payment"
                            android:layout_weight="1"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:text="As per current Per Unit Charge"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/parent_layout_padding"
                        >
                        <TextView
                            android:textSize="10sp"
                            android:layout_gravity="center"
                            android:textColor="@color/themeColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/btn_radius"
                            android:text="@string/security_money_hint"
                            />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/padding_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="@dimen/header_text_size"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_date"
                        />
                    <View style="@style/Divider" android:layout_marginTop="@dimen/btn_radius"/>
                    <LinearLayout
                        android:layout_marginTop="@dimen/parent_layout_padding"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:text="@string/starting_date"
                            />
                        <EditText
                            android:focusable="false"
                            android:id="@+id/startDate"
                            android:hint="@string/select_date"
                            android:layout_weight="1"
                            android:background="@drawable/input_back_date_edit"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="@dimen/btn_radius"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:text="@string/checkOut"
                            />
                        <EditText
                            android:focusable="false"
                            android:id="@+id/endDate"
                            android:hint="@string/select_date"
                            android:layout_weight="1"
                            android:background="@drawable/input_back_date_edit"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>



                </LinearLayout>
                <LinearLayout
                    android:layout_marginBottom="@dimen/margin_top_view"
                    android:padding="@dimen/parent_layout_padding"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/note"
                        />
                    <View style="@style/Divider" android:layout_marginTop="@dimen/btn_radius"/>
                    <TextView
                        android:layout_marginTop="@dimen/btn_radius"
                        android:text="@string/note_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        />
                    <TextView
                        android:layout_marginTop="@dimen/btn_radius"
                        android:text="@string/note_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        />
                    <TextView
                        android:layout_marginBottom="@dimen/margin_top_view"
                        android:layout_marginTop="@dimen/btn_radius"
                        android:text="@string/note_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <LinearLayout
           android:orientation="horizontal"
           android:layout_alignParentBottom="true"
           android:background="@color/white"
           android:padding="@dimen/padding_4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <LinearLayout
               android:weightSum="3"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <Button
                   android:id="@+id/visitBook"
                   android:padding="@dimen/btn_padding"
                   android:theme="@style/PrimaryButton"
                   android:textColor="@color/white"
                   android:text="@string/book_visit"
                   android:layout_weight="1.5"
                   android:layout_width="0sp"
                   android:layout_height="wrap_content" />
               <Button
                   android:id="@+id/fod_booking"
                   android:padding="@dimen/btn_padding"
                   android:theme="@style/AccentBtn"
                   android:textColor="@color/white"
                   android:text="@string/book_btn"
                   android:layout_weight="1.5"
                   android:layout_width="0sp"
                   android:layout_height="wrap_content" />
           </LinearLayout>

       </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>