<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewBooking">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/parent_layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            app:cardUseCompatPadding="true"
            android:clipToPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="@dimen/parent_layout_padding"
                    android:layout_marginBottom="@dimen/padding_4"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:scaleType="centerCrop"
                        android:layout_weight=".75"
                        android:layout_width="0sp"
                        android:layout_height="128sp"
                        android:src="@drawable/image_logo_back"/>
                    <LinearLayout
                        android:layout_marginLeft="@dimen/padding_4"
                        android:orientation="vertical"
                        android:layout_weight="1.25"
                        android:layout_marginTop="@dimen/parent_layout_padding"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/property_name"
                            />
                        <TextView
                            android:text="@string/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <View style="@style/Divider" android:layout_marginTop="@dimen/btn_radius"/>
        <LinearLayout
            android:layout_marginBottom="@dimen/padding_4"
            android:padding="@dimen/parent_layout_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="@dimen/parent_layout_padding"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:text="@string/security_money"
                    />
                <TextView
                    android:gravity="end"
                    android:id="@+id/security_money"
                    android:layout_weight="1"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:text="0000"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/btn_radius"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly_money"
                    />
                <TextView
                    android:gravity="end"
                    android:id="@+id/monthly_payment"
                    android:layout_weight="1"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:text="0000"
                    />
            </LinearLayout>
            </LinearLayout>
                <View style="@style/Divider" android:layout_marginTop="@dimen/btn_radius"/>


                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/parent_layout_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/available"
                        />
                    <ImageView
                        android:id="@+id/avail_image"
                        android:src="@drawable/checked"
                        android:layout_marginTop="@dimen/padding_4"
                        android:layout_gravity="center"
                        android:layout_width="24sp"
                        android:layout_height="24sp" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <CheckBox
            android:id="@+id/checkbox_advance"
            android:layout_marginTop="@dimen/padding_8"
            android:hint="@string/adv_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        android:padding="@dimen/padding_4"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/paymentTotal"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/payment"
            android:layout_weight="1.7"
            android:layout_width="0sp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/payNow"
            android:padding="@dimen/btn_padding"
            android:theme="@style/AccentBtn"
            android:text="@string/pay_now"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"/>
    </LinearLayout>

</RelativeLayout>